# CG-project-2022-fall

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: config.json  multi-big.json  multi-small.json  single-big.json  single-small.json
cuda/: CMakeLists.txt  defines.cu  integrate.cu  integrate.cuh  test.cu
executable/: .ninja_deps  .ninja_log  build.ninja  imgui.ini
executable/.cmake/api/v1/reply/: cache-v2-48c2aaeae4c0b96729d5.json  cmakeFiles-v1-8554d77f453b6433972b.json  codemodel-v2-40e854e9034342719d4d.json  directory-libs.json-Release-656d1b5edae1333e8e70.json  index-2023-01-10T09-32-52-0826.json  target-CG_project_2022_fall-Release-18b4f9269752c396f8e8.json  toolchains-v1-75f43c689b6fb06eba2c.json
include/: ABR.h  Adaptive.h  Brick.h  Cell.h  Construct.h  Gradient.h  Opacity_corr.h  Render.cpp  Render.h  Space_skipping.h  Support.h  Transfer_func.cpp  Transfer_func.h  VDBLoader.h  VDBLoader.hpp  accel.h  camera.h  common.h  config.h  config_io.h  geometry.h  image.h  input.h  integrator.h  integrator_cuda.cuh  interaction.h  light.h  load_obj.h  ray.h  scene.h  shader.h  utils.h
libs/: CMakeLists.txt
libs/glew/: glew.pc
libs/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
report/: report.aux  report.tex
src/: ABR.cpp  Adaptive.cpp  Brick.cpp  Cell.cpp  Construct.cpp  Gradient.cpp  Opacity_corr.cpp  Space_skipping.cpp  Support.cpp  VDBLoader.cpp  accel.cpp  camera.cpp  common.cpp  geometry.cpp  image.cpp  integrator.cpp  light.cpp  load_obj.cpp  main.cpp  ray.cpp  scene.cpp  shader.cpp  test.cu  utils.cpp
trash/: input.cpp  transform.cpp  transform.h
